<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_movie"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_movie"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_series"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_series"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_episode"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_episode"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_game"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_game"/>
            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cl_chips"
            tools:listitem="@layout/card_movie"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>