<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showAnimationBehavior="inward"
            app:hideAnimationBehavior="outward"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_bookmark"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_no_bookmark"
            app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_favorite"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_no_favorite"
            app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
            app:layout_constraintEnd_toStartOf="@id/bt_bookmark"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_share"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_share"
            app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
            app:layout_constraintEnd_toStartOf="@id/bt_favorite"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_download_list"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_download_list"
            app:layout_constraintEnd_toStartOf="@id/chip_watch_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_watch_list"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_watch_list"
            app:layout_constraintEnd_toStartOf="@id/bt_share"
            app:layout_constraintStart_toEndOf="@id/chip_download_list"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_below="@id/cl_actions"
        android:layout_margin="8dp"
        android:contentDescription="@string/label_movie" />

    <View
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_alignStart="@+id/iv_poster"
        android:layout_alignTop="@id/iv_poster"
        android:background="@drawable/image_shadow" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cl_actions"
        android:layout_toEndOf="@id/iv_poster"
        android:maxLines="2"
        android:text="@string/label_movie"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_toEndOf="@id/iv_poster"
        android:paddingHorizontal="4dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:clickable="false"
                android:text="@string/label_movie" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cl_chips"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/iv_poster"
        android:text="@string/label_actors_value"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_actors"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@id/iv_poster"
        android:ellipsize="end"
        android:lines="4"
        android:maxLines="5"
        android:text="@string/label_plot"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textStyle="italic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_poster"
        android:layout_toEndOf="@id/iv_poster">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_more_info"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_more_info"
            app:icon="@drawable/ic_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>